--- a/src/main/resources/templates/blog-add.html
+++ b/src/main/resources/templates/blog-add.html
@@ -7,15 +7,15 @@
 </head>
 <body>
 <header th:insert="blogs/header :: header"></header>
-<div class="container mt-5">
-      <h1>Добавление статьи</h1>
-       <form action="/blog/add" method="post">
-              <input type = "text" name="title" placeholder="Ведите название страницы" class="form-control">
-              <input type = "text" name="anons" placeholder="Ведите анонс страницы" class="form-control">
-              <textarea type = "text" name="full-text" placeholder="Ведите полный текст статьи" class="form-control"></textarea>
-              <button th:type="submit" class="button-success">Добавить статью </button>
-       </form>
-       </div>
+              <div class="container mt-5 mb-5">
+                    <h1>Добавление статьи</h1>
+                     <form action="/blog/add" method="post">
+                            <input type = "text" name="title" placeholder="Ведите название страницы" class="form-control"><br >
+                            <input type = "text" name="anons" placeholder="Ведите анонс страницы" class="form-control"><br >
+                            <textarea name="full_text" placeholder="Ведите полный текст статьи" class="form-control"></textarea><br >
+                            <button th:type="submit" class="btn btn-success">Добавить статью </button>
+                     </form>
+              </div>
 </div>
 <div th:insert="blogs/footer :: footer"></div>
 </body>
