--- a/src/main/resources/templates/blog-details.html
+++ b/src/main/resources/templates/blog-details.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html lang = "en" >
-<head >
-       <meta charset = "UTF-8" >
-       <title >$Title$</title >
-</head >
-<body >
-$END$
-</body >
-</html >
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+       <title>Blog site</title>
+       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+</head>
+<body>
+<header th:insert="blogs/header :: header"></header>
+<div class="container mt-5">
+       <div th:each="el: ${post}" class="alert alert-info mt-2">
+              <h3 th:text="${el.title}"/>
+              <p th:text="${el.anons}"/>
+              <p th:text="${el.full_text}"/>
+              <p><b> Просмотры:</b> <span th:text="${el.views}"/></p>
+              <a th:href="'/blog/'+ ${el.id} + '/edit'" class="btn btn-warning">Редактировать</a >
+              <form th:action = "'/blog/' + ${el.id} + '/remove'" method="post">
+                     <br><button class="btn btn-warning" type="submit">Удалить</button>
+              </form >
+       </div>
+</div>
+<div th:insert="blogs/footer :: footer"></div>
+</body>
+</html>
