--- a/src/main/resources/templates/blog-edit.html
+++ b/src/main/resources/templates/blog-edit.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html lang = "en" >
-<head >
-       <meta charset = "UTF-8" >
-       <title >$Title$</title >
-</head >
-<body >
-$END$
-</body >
-</html >
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+       <title>Редактирование статьи</title>
+       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+</head>
+<body>
+<header th:insert="blogs/header :: header"></header>
+
+<div class="container mt-5 mb-5">
+       <h1>Редактироваине статьи</h1>
+              <div th:each="el : ${post}">
+                   <form method="post">
+                            <input type = "text" th:value="${el.title}" name="title" placeholder="Ведите название страницы" class="form-control"><br >
+                            <input type = "text"  th:value="${el.anons}" name="anons" placeholder="Ведите анонс страницы" class="form-control"><br >
+                            <textarea name="full_text" placeholder="Ведите полный текст статьи" class="form-control" th:text="${el.full_text}"/> <br >
+                     <button th:type="submit" class="btn btn-success">Обновить</button>
+                   </form>
+              </div>
+</div>
+</div>
+<div th:insert="blogs/footer :: footer"></div>
+</body>
+</html>
